# inflation-observatory-pipeline

./: LICENSE  README.md  dg.toml  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py  test.py
src/dagster_project/defs/: assets.py  resources.py
src/loaders/: load_raw_data.py
src/models/: raw_tables.py
src/parsers/: base.py  coto_parser.py
src/price_history/: definitions.py
src/price_history/dagster_project/defs/: assets.py
src/price_history/defs/: assets.py  resources.py  schedules.py
src/price_history/loaders/: load_raw_data.py
src/price_history/scrapers/: base.py  carrefour_scraper.py  coto_scraper.py
src/price_history/utils/: logging.py  tools.py
src/scrapers/: base.py  carrefour_scraper.py  coto_scraper.py
src/utils/: drivers.py  logging.py  tools.py
supermarket_prices/: .user.yml  dbt_project.yml  packages.yml
supermarket_prices/models/: sources.yml
supermarket_prices/models/marts/: date_dimension.sql  dates.sql  dim_date.sql  dim_products.sql  dim_store.sql  facts_table.sql
supermarket_prices/models/staging/: stg_products.sql  stg_responses.sql
tests/: test_carrefour_scraper.py  test_coto_scrapers.py  test_models.py  test_scrapers.py
